--- a/full-stack.html
+++ b/full-stack.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1789018'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1789018'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -151,7 +151,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -183,7 +183,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -195,7 +195,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wish/5351e764-8f8e-41fe-af86-08266e2ec18e'>Wish - Full Stack Software Engineer: Internal Tools, Product Web</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/5351e764-8f8e-41fe-af86-08266e2ec18e'>Wish - Full Stack Software Engineer: Internal Tools, Product Web</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -257,7 +257,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Full Stack Engineer at Findmypast.</p>
 <hr/>
-<h5><a href='https://telusinternational.avature.net/careers/PipelineDetail/Full-Stack-Developer-Net/6490'>Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telusinternational.avature.net/careers/PipelineDetail/Full-Stack-Developer-Net/6490'>Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... You will grow and maintain our suite of applications covering field technician 
 learning and sales. You will work with the .NET platform in a Windows 
@@ -349,7 +349,7 @@ hosting stack enables high quality experience to our creators and viewers.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/B5EBE4734A'>Codete - Jobs: FullStack Developer - Apply online</a></h5> 
+<h5><a href='https://codete.workable.com/j/B5EBE4734A'>Codete - Jobs: FullStack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Lesser Poland Voivodeship, Poland</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -462,7 +462,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">Denver Denver Boulder Boulder Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/brighthealthplan/e91c1318-1eb6-4882-92c6-242a891b41b9'>Bright Health - Sr. Full-Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/brighthealthplan/e91c1318-1eb6-4882-92c6-242a891b41b9'>Bright Health - Sr. Full-Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -470,7 +470,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/249164-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/249164-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>13. Juli 2019 ... NEUGELB Studios has a job opening for Full-Stack Developer (m/f/d) in Berlin (
 published: 21.05.2019). Apply now or check the other available jobs.</p>
